# licence_plate_detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_github_issues.sh  dev.sh  main.ipynb  pyproject.toml  req.txt  requirements.txt  run_main.ipynb
.run/: clean.run.xml  down.run.xml  start.run.xml  up.run.xml
configs/: environment.yml  model.yml  optimizers.yml  training.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/: __init__.py  main.py
src/data/: __init__.py  data_preparation.py
src/data/processors/: __init__.py  batch_combiner.py  batch_processor.py  data_splitter.py  dataset_scanner.py
src/model/: __init__.py  app.py  predict.py  train.py
src/model/static/: __init__.py  setup_model.py
src/settings/: __init__.py  config.py  logger.py
src/settings/configs/: __init__.py  environment.py  model.py  optimizers.py  training.py
src/utils/: __init__.py  preprocessor_factory.py  save_model.py
src/utils/preprocessors/: __init__.py  base.py  image.py  tabular.py  text.py
tools/: __init__.py  lint.py
tools/configs/: .flake8  mypy.ini
